Update to JDK 25